	* Added iIGNORE_SQLITE3_THREADSAFE_CHECK to disable sqlite3_threadsafe check for Hardy compile (LP: #433996)
	* Added support for EPG in Hong Kong from Raymond Tau (LP: #477388)
	* Set timeout for EPG events to 1 second (LP: #434994) 
	* Moved DB to .local/share/me-tv (LP: #486247) 
	* Added schema file for GConf (LP: #460612)

2009-08-10  Michael Lamothe <michael.lamothe@gmail.com>

	* 1.0.0
	* Reimplemented menus/toolbars in UIManager
	* Added menu accelerators
	* Added Channel Up/Down and "Change View Mode" menu items 
	* Using a configurable deinterlacer rather than the hard-coded tvtime
	* Added French translation

2009-08-01  Scott Evans <scott@vk7hse.hobby-site.org>

	* 0.10.3
	* Changed default read timeout to 15 seconds

2009-07-28  Scott Evans <scott@vk7hse.hobby-site.org>

	* 0.10.2
	* Fix for Lenny compile

2009-07-22  Michael Lamothe <michael.lamothe@gmail.com>

	* 0.10.0
	* Now using a custom xine player
	* Fixed mute on channel change issue
	* Fixed video size issues on startup
	* Added channel changing by key bindings

2009-07-07  Michael Lamothe <michael.lamothe@gmail.com>

	* 0.9.6
	* Scheduled recordings/EPG events are now deleted when the channel is deleted
	* An attempt to make the scan/import more friendly to duplicate channel names
	* Made EPG save more efficient
	* Fixed crash when adding a scheduled recording
	
2009-07-02  Michael Lamothe <michael.lamothe@gmail.com>

	* 0.9.5
	* Using xshm as default xine video driver
	* Added conditional compile for recent DVB parameters (not available in Debian stable)
	* Fix for "GtkSpinButton: setting an adjustment with non-zero page size is deprecated"
	* Removed g_error() calls from THREAD_CATCH which forced the application to abort
	* Made initial tuning file parser a little more robust
	* Added periodical prune() call for the EPG events held in memory

2009-06-24  Michael Lamothe <michael.lamothe@gmail.com>

	* 0.9.4
	* Fixed xine audio/video driver saving in preferences dialog