@@ -26,7 +26,7 @@
 Channel::Channel()
 {
 	channel_id		= 0;
-	flags			= 0;
+	type			= 0;
 	service_id		= 0;
 }
 
