@@ -45,6 +45,7 @@ public:
 	ChannelArray& get_channels();
 	void next_channel();
 	void previous_channel();
+	void select_display_channel();
 	void set_display_channel(const Channel& channel);
 	void set_display_channel_by_id(guint channel_id);
 	void set_display_channel_index(guint channel_index);
